--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="hero">
       <div class="hero-text">
         <h1>Shine with Lustree</h1>
-        <p>Discover elegant products crafted just for you.</p>
+        <p>Discover The elegant products, always at the lowest price than market.</p>
         <button onclick="navigate('shop')">Explore Products</button>
       </div>
     </div>
@@ -217,3 +217,4 @@
   </script>
 </body>
 </html>
+
