--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     section.active { display: block; opacity: 1; transform: translateY(0); }
 
     /* Hero */
-    .hero { height: 70vh; background: url('C:\Users\amtes\OneDrive\Pictures\lustree\lustree logo.jpg) center/cover no-repeat; display: flex; align-items: center; justify-content: center; position: relative; overflow: hidden; }
+    .hero { height: 70vh; background: url('https://images.unsplash.com/photo-1523275335684-37898b6baf30') center/cover no-repeat; display: flex; align-items: center; justify-content: center; position: relative; overflow: hidden; }
     .hero-text { text-align: center; background: rgba(0,0,0,0.6); padding: 30px; border-radius: 10px; color: #fff; opacity: 0; transform: translateY(20px); animation: fadeInUp 1s forwards; }
     .hero-text h1 { font-size: 3rem; margin-bottom: 15px; transition: transform 0.3s; }
     .hero-text button { background: #4CAF50; border: none; padding: 12px 25px; color: #fff; font-size: 1rem; border-radius: 5px; cursor: pointer; transition: 0.3s, transform 0.3s; }
@@ -217,5 +217,6 @@
   </script>
 </body>
 </html>
+
 
 
